--- a/slides.qmd
+++ b/slides.qmd
@@ -50,22 +50,18 @@ font-size: 2rem;
 
 ## {.center}
 
-<div style="font-size: 4.2rem; padding-left: 0.5em; padding-bottom: 2em;">
-"Research can be **open** and **reproducible** and still completely and obviously **wrong**."
+<div style="border-radius: 4px; border: 6px solid #999; background: #f9f9f9; padding: 1.5rem 1.5rem 2rem 2rem; font-family: Optima, Georgia, serif; font-size: 4rem; line-height: 1.5; margin: 1rem auto 1rem auto;">
+  "Research can be <strong>open</strong> and <strong>reproducible</strong> and still completely and obviously <strong>wrong</strong>."
 </div>
 
-<div style="font-size: 3rem; padding-bottom: 0.2em;">
-*Richard McElreath*
-</div>
-
-<div style="font-size: 2rem;">
-[https://elevanth.org/blog/2025/07/09/which-kind-of-science-reform](https://elevanth.org/blog/2025/07/09/which-kind-of-science-reform)
+<div style="text-align: right; font-size: 3rem; font-style: italic; margin-top: 1.5rem;">
+  — Richard McElreath
+  <div><a href="https://elevanth.org/blog/2025/07/09/which-kind-of-science-reform" style="font-size: 1.7rem; text-decoration: none;">Which Kind of Science Reform</a></div>
 </div>
 
 ##
 
 ![](images/maslow-comic-1.png){fig-align="center"}
-
 
 ##
 
